@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1556 2003/10/06 10:35:36 toninhofwi Exp $
+ * $Id: ChangeLog,v 1.1557 2003/10/06 12:09:57 jonnymind Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,11 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-10-06 09:00 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
+  * source/rtl/gtwin/gtwin.c
+    - i_mouselast
+    * added 2 casts
 
 2003-10-06 14:05 UTC+2000 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
   * source/rtl/hbrandom.c
